fix: DataSources list spacing

--- a/src/pages/DataSources/index.module.less
+++ b/src/pages/DataSources/index.module.less
@@ -1,3 +1,7 @@
 .wrapper {
   width: 100%;
 }
+
+.body {
+  padding: 0 16px;
+}
